2004-02-24  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/livarot/Makefile.am (Path_test_LDADD): Fix order of libs.

	* src/select-toolbar.cpp (sp_object_layout_any_value_changed):
	NR::Matrix'ification.

2004-02-23  MenTaLguY <mental@rydia.net>

	* src/selection-chemistry.cpp, src/selection-chemistry.h,
	  src/seltrans.cpp, src/seltrans.h, src/verbs.cpp,
	  src/dialogs/transformation.cpp, src/libnr/nr-point-fns.h,
	  src/libnr/nr-point.h, src/libnr/nr-rect.h: more NRPoint removal

2004-02-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-item-transform.cpp (sp_item_rotate_rel):
	Use NR::Rect and .midpoint.

	* src/dropper-context.cpp (sp_dropper_context_root_handler):
	* src/sp-text.cpp (sp_string_set_shape):
	Cleanup: use translate rather than setting individual matrix elements.

	* src/libnr/nr-matrix-ops.h (operator*: Matrix*rotate, translate*scale,
	scale*translate, Matrix*scale): New functions.

2004-02-22  Ted Gould <ted@gould.cx>

	* src/extension/Makefile.am, src/extension/implementation/Makefile.am,
	src/Makefile.am, po/POTFILES.in, po/*.po (because of previous change):
	Okay, I screwed up.  Here are some distcheck fixes for various
	things.  Still not entirely clean.  But these are much closer
	than we were.

2004-02-22  Ted Gould <ted@gould.cx>

	* src/modules -> src/extensions:
	Changing the directory name so that it fits the new naming
	conventions that we're working with.

2004-02-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/desktop.cpp (sp_desktop_init, sp_desktop_set_display_area):
	* src/libnrtype/nr-font.cpp (nr_font_generic_glyph_outline_get):
	* src/libnrtype/nr-typeface.cpp (nr_font_new_default):
	Don't use implicit NR::Matrix conversions.

	* src/libnr/nr-translate-ops.h (operator!=): new.

	* src/sp-item.h, src/sp-item.cpp (sp_item_bbox_desktop):
	Add NR::Rect version.

	* src/inkview.cpp: Address compiler warning: declare is_jar iff it is
	defined, i.e. #ifdef WITH_INKJAR.
